<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="a">点击使用账号密码登录(老用户)</string>
    <string name="b">查看详情</string>
    <string name="c">跳过</string>
    <string name="d">检测到您当前账号还未完善密码，为了避免您书架丢失，建议您前往完善密码</string>
    <string name="e">已加入书架</string>
    <string name="f">继续阅读 %1$s</string>
    <string name="g">休息一会儿，点击广告支持应用</string>
    <string name="h">滑动空白区域可继续阅读</string>
    <string name="i">正在为您下载，请稍候......</string>
    <string name="j">切换置后台</string>
    <string name="k">发现新版本</string>
    <string name="l">日间模式</string>
    <string name="m">夜间模式</string>
    <string name="app_name">无痕读书</string>
    <string name="n">亲,您的网络连接断了，联网使用更顺畅!</string>
    <string name="o">新版本</string>
    <string name="p">当前已是最新版本</string>
    <string name="q">请您先登录</string>
    <string name="r">安装包已下载，点击下方按钮直接安装</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="s">填写邀请码，注册用户有好礼！直接前往注册！</string>
    <string name="t">您的好友正在使用{appname}看海量免费小说，邀你一起来体验，下载链接：</string>
    <string name="u">作者:%1$s</string>
    <string name="v">游客登录</string>
    <string name="w">报告，我有弹幕要发</string>
    <string name="x">不透明度</string>
    <string name="y">字号</string>
    <string name="z">弹幕设置</string>
    <string name="a0">速度</string>
    <string name="a1">弹幕开关</string>
    <string name="a2">发送</string>
    <string name="a3">弹幕发送失败</string>
    <string name="a4">发一条撼动灵魂的弹幕吧!</string>
    <string name="a5">弹幕发送成功</string>
    <string name="a6">已缓存至：%1$s，将从该章开始</string>
    <string name="a7">暂未阅读</string>
    <string name="a8">已阅读至：%1$s，将从该章开始</string>
    <string name="a9">观看小视频即可开始免费下载，中途退出则视为放弃哦～</string>
    <string name="a_">观看</string>
    <string name="aa">分段缓存完成</string>
    <string name="ab">添加书签成功</string>
    <string name="ac">添加书签</string>
    <string name="ad">退出自动阅读</string>
    <string name="ae">页面加载失败自动阅读停止</string>
    <string name="af">已退出自动阅读</string>
    <string name="ag">加速 +</string>
    <string name="ah">左右模式</string>
    <string name="ai">覆盖模式</string>
    <string name="aj">上下模式</string>
    <string name="ak">模式</string>
    <string name="al">减速 -</string>
    <string name="am">速度</string>
    <string name="an">速度：%1$s</string>
    <string name="ao">尾页停止自动阅读</string>
    <string name="ap">滚屏</string>
    <string name="aq">举报</string>
    <string name="ar">目录</string>
    <string name="as">章节内容不正确？可以试试换源～</string>
    <string name="at">%1$s       %2$s</string>
    <string name="au">换源</string>
    <string name="av">本章节正在处理中，不需要举报！</string>
    <string name="aw">章节错误反馈：《%1$s》的\"%2$s(cid:%3$s)\"</string>
    <string name="ax">逛逛书城</string>
    <string name="ay">点击换源</string>
    <string name="az">点击分享</string>
    <string name="b0">收藏</string>
    <string name="b1">赞</string>
    <string name="b2">评论</string>
    <string name="b3">默认源</string>
    <string name="b4">%1$s  还写过</string>
    <string name="b5">作者：</string>
    <string name="b6">目录</string>
    <string name="b7">类型：%1$s</string>
    <string name="b8">全部章节 (%1$d)</string>
    <string name="b9">同类推荐</string>
    <string name="b_">评分失败!</string>
    <string name="ba">您的评分:%1$s分</string>
    <string name="bb">换一批</string>
    <string name="bc">大家都在玩</string>
    <string name="bd">最近更新：%1$s</string>
    <string name="be">获取书籍失败</string>
    <string name="bf">请等待书籍加载完成</string>
    <string name="bg">分</string>
    <string name="bh">来源：https://www.baidu.com</string>
    <string name="bi">来源：</string>
    <string name="bj">书籍详情</string>
    <string name="bk">状态：%1$s</string>
    <string name="bl">更新：%1$s</string>
    <string name="bm">上传者：%1$s</string>
    <string name="bn">角色：%1$s</string>
    <string name="bo">简介：</string>
    <string name="bp">最多收藏</string>
    <string name="bq">本周最热</string>
    <string name="br">最新发布</string>
    <string name="bs">小编推荐</string>
    <string name="bt">完结</string>
    <string name="bu">跟随系统</string>
    <string name="bv">繁体</string>
    <string name="bw">评分</string>
    <string name="bx">热更</string>
    <string name="by">听书</string>
    <string name="bz">书签</string>
    <string name="c0">更多设置>></string>
    <string name="c1">返回书架</string>
    <string name="c2">下一章</string>
    <string name="c3">上一章</string>
    <string name="c4">恭喜您读完最新章节</string>
    <string name="c5">枫桥夜泊#月落乌啼霜满天、江枫渔火对愁眠#姑苏城外寒山寺、夜半钟声到客船</string>
    <string name="c6">立即阅读</string>
    <string name="c7">%1$s/%2$s页</string>
    <string name="c8">热门书单</string>
    <string name="c9">大家都在看</string>
    <string name="c_">常亮</string>
    <string name="ca">15分钟</string>
    <string name="cb">系统</string>
    <string name="cc">60分钟</string>
    <string name="cd">30分钟</string>
    <string name="ce">锁屏时间</string>
    <string name="cf">本章节内容源于网友上传校对(暂无法点击访问源网站)</string>
    <string name="cg">音量键翻页</string>
    <string name="ch">正在下载语音插件,请稍候</string>
    <string name="ci">开始下载插件</string>
    <string name="cj">插件下载失败</string>
    <string name="ck">取消</string>
    <string name="cl">马上更新</string>
    <string name="cm">检测到新的语音插件（%1$s），永远为您提供更稳定更优质的朗读服务，开始更新吧?</string>
    <string name="cn">首次需下载听书插件（%1$s）,开始听书吧?</string>
    <string name="co">页面加载失败语音朗读停止</string>
    <string name="cp">朗读初始化失败</string>
    <string name="cq">语音插件</string>
    <string name="cr">推荐</string>
    <string name="cs">刷新</string>
    <string name="ct">如章节内容不正确？或者正在更新中？点击报错反馈给我们，我们会第一时间处理～</string>
    <string name="cu">移除书签成功</string>
    <string name="cv">移除书签</string>
    <string name="cw">报错</string>
    <string name="cx">显示段落末尾想法</string>
    <string name="cy">全屏点击翻下页</string>
    <string name="cz">隐藏状态栏</string>
    <string name="d0">隐藏虚拟按键</string>
    <string name="d1">分享</string>
    <string name="d2">左右翻页</string>
    <string name="d3">左右</string>
    <string name="d4">翻页</string>
    <string name="d5">仿真翻页</string>
    <string name="d6">仿真</string>
    <string name="d7">上下翻页</string>
    <string name="d8">上下</string>
    <string name="d9">当前源</string>
    <string name="d_">正在听书</string>
    <string name="da">退出朗读</string>
    <string name="db">已退出语音朗读</string>
    <string name="dc">已暂停朗读</string>
    <string name="dd">暂停朗读</string>
    <string name="de">发音</string>
    <string name="df">已恢复朗读</string>
    <string name="dg">恢复朗读</string>
    <string name="dh">快</string>
    <string name="di">慢</string>
    <string name="dj">语速</string>
    <string name="dk">90分钟</string>
    <string name="dl">15分钟</string>
    <string name="dm">60分钟</string>
    <string name="dn">30分钟</string>
    <string name="do">定时</string>
    <string name="dp">重新加载该页</string>
    <string name="dq">扫描二维码，立即安装</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="dr">没有更多数据</string>
    <string name="ds">加载失败，请点我重试</string>
    <string name="dt">正在加载中...</string>
    <string name="du">从当前章节缓存</string>
    <string name="dv">全本缓存</string>
    <string name="dw">缓存任务已暂停!</string>
    <string name="dx">查看网络设置</string>
    <string name="dy">缓存</string>
    <string name="dz">当前未检测到网络连接</string>
    <string name="e0">你没有连上WiFi哦，缓存会消耗你的流量，是否确定缓存 ?</string>
    <string name="e1">友情提示</string>
    <string name="e2">女漫</string>
    <string name="e3">男漫</string>
    <string name="e4">切换账号(老用户)</string>
    <string name="e5">退出登录</string>
    <string name="e6">抱歉，暂无更多源可供使用！</string>
    <string name="e7">请求源失败，试试右上角刷新，重试！</string>
    <string name="e8">为了提供更好的阅读，请支持一下我们，下一页可能为您展示广告！</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="e9">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="e_">+86</string>
    <string name="ea">Chip text</string>
    <string name="eb">Clear text</string>
    <string name="ec">弹幕 %1$d</string>
    <string name="ed">点击可进入分类</string>
    <string name="ee">点击添加到我的分类</string>
    <string name="ef">我的分类</string>
    <string name="eg">分类推荐</string>
    <string name="eh">拖拽可排序</string>
    <string name="ei">编辑</string>
    <string name="ej">完成</string>
    <string name="ek">左右翻页模式</string>
    <string name="el">上下翻页模式</string>
    <string name="em">图片加载失败</string>
    <string name="en">当前</string>
    <string name="eo">下一话</string>
    <string name="ep">上一话</string>
    <string name="eq">全部</string>
    <string name="er">国内</string>
    <string name="es">港台</string>
    <string name="f2">漫画</string>
    <string name="fa">(温馨提示：亲，您发布的书单将会经过我们严格的审核，杜绝垃圾书单，请您合理编辑)</string>
    <string name="fb">书架添加</string>
    <string name="fc">书库添加</string>
    <string name="fd">填写书单介绍（最少10个字不超过200字）</string>
    <string name="fe">男频</string>
    <string name="fj">填写书单名称</string>
    <string name="fk">女频</string>
    <string name="gv">下载</string>
    <string name="gy">小说</string>
    <string name="ic">点击登录</string>
    <string name="ix">同意</string>
    <string name="iy">给个好评</string>
    <string name="iz">我的书架</string>
    <string name="j3">缓存管理</string>
    <string name="j4">取消</string>
    <string name="jl">意见反馈</string>
    <string name="km">消息通知</string>
    <string name="kt">拒绝</string>
    <string name="kz">分享应用</string>
    <string name="li">上传作品</string>
    <string name="lk">求书进度</string>
    <string name="ln">为了您更好的体验漫画阅读，我们为您提供了单独的精品漫画应用包，强烈推荐您下载体验。</string>
    <string name="mu">我的书单</string>
    <string name="mw">最近浏览</string>
    <string name="n3">免广告特权</string>
    <string name="n8">已推广 %1$d 人</string>
    <string name="n_">暂未享受广告特权</string>
    <string name="ns">应商店要求，需你同意才能使用我们的服务！</string>
    <string name="nt">美女</string>
    <string name="s7">关于我们</string>
    <string name="s9">清除小说缓存</string>
    <string name="s_">清除图片缓存</string>
    <string name="sa">清除其它缓存</string>
    <string name="sb">跟随系统深色模式</string>
    <string name="sc">免责声明</string>
    <string name="sd">检查更新</string>
    <string name="so">设置</string>
    <string name="ss">看视频免广告</string>
    <string name="st">分享推广</string>
    <string name="su">分享可得终身免广告特权></string>
    <string name="t5">换肤</string>
    <string name="u2">提示</string>
    <string name="yw">终于等到你</string>
    <string name="yx">欢迎来到%1$s</string>
</resources>