<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/shape_dialog_tips_bg" android:padding="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.299988sp" android:textColor="@color/color_666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yw" />
    <TextView android:textSize="20.0sp" android:textColor="@color/color_333333" android:id="@id/ab9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/yx" />
    <TextView android:textSize="14.0sp" android:textColor="@color/color_666666" android:id="@id/ab6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/yx" />
    <TextView android:textSize="14.0sp" android:textColor="@color/color_ffffff" android:gravity="center" android:id="@id/ab5" android:background="@drawable/selector_red_semicircle_bg" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="20.0dip" android:text="@string/ix" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
    <TextView android:textSize="14.0sp" android:textColor="@color/color_333333" android:gravity="center" android:id="@id/ab7" android:paddingTop="15.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/kt" />
    <TextView android:textSize="12.0sp" android:textColor="@color/color_F56C6C" android:layout_gravity="center_horizontal" android:id="@id/ab8" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/ns" />
</LinearLayout>