<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/shape_dialog_tm_tips_bg" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/dl" android:textStyle="bold" android:textColor="@color/color_333333" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/n3" />
        <TextView android:textSize="13.0sp" android:textColor="@color/color_666666" android:layout_gravity="center|right" android:id="@id/xr" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/n_" />
    </FrameLayout>
    <RelativeLayout android:background="@drawable/c5" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/dl" android:textColor="@color/color_ffffff" android:id="@id/xt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/n8" android:layout_centerVertical="true" />
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffff6347" android:layout_gravity="center_horizontal" android:id="@id/xv" android:background="@drawable/shape_popup_white_bg" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/st" android:layout_alignParentRight="true" android:paddingStart="15.0dip" android:paddingEnd="15.0dip" />
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff0693ea" android:layout_gravity="center_horizontal" android:id="@id/xs" android:background="@drawable/shape_popup_white_bg" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ss" android:layout_toLeftOf="@id/xv" android:paddingStart="15.0dip" android:paddingEnd="15.0dip" android:layout_marginEnd="15.0dip" />
        <TextView android:textSize="12.0sp" android:textColor="@color/color_ffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/su" android:layout_below="@id/xv" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>