<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:fancy="http://schemas.android.com/apk/res-auto">
    <EditText android:textSize="13.0sp" android:textColor="@color/color_333333" android:textColorHint="@color/color_999999" android:id="@id/jv" android:background="@null" android:paddingLeft="10.0dip" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fj" android:singleLine="true" />
    <EditText android:textSize="13.0sp" android:textColor="@color/color_333333" android:textColorHint="@color/color_999999" android:gravity="center|left|top" android:id="@id/ju" android:background="@null" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/fd" android:maxLines="5" android:minLines="5" />
    <RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.biquge.ebook.app.widget.fancybuttons.FancyButton android:gravity="center" android:id="@id/jq" android:paddingLeft="15.0dip" android:paddingTop="7.0dip" android:paddingRight="15.0dip" android:paddingBottom="7.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" fancy:cg="@color/colorPrimary" fancy:ch="0.5dip" fancy:ci="#00000000" fancy:cy="15.0dip" fancy:d3="@string/fb" fancy:d5="@color/color_666666" fancy:d9="12.0sp" />
        <com.biquge.ebook.app.widget.fancybuttons.FancyButton android:gravity="center" android:id="@id/jr" android:paddingLeft="15.0dip" android:paddingTop="7.0dip" android:paddingRight="15.0dip" android:paddingBottom="7.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@id/jq" android:layout_centerVertical="true" fancy:cg="@color/colorPrimary" fancy:ch="0.5dip" fancy:ci="#00000000" fancy:cy="15.0dip" fancy:d3="@string/fc" fancy:d5="@color/color_666666" fancy:d9="12.0sp" />
        <com.biquge.ebook.app.widget.AppRadioButton android:textSize="12.0sp" android:textColor="@color/color_666666" android:gravity="center" android:id="@id/jt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/fk" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <com.biquge.ebook.app.widget.AppRadioButton android:textSize="12.0sp" android:textColor="@color/color_666666" android:gravity="center" android:id="@id/js" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/fe" android:layout_toLeftOf="@id/jt" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textSize="13.0sp" android:textColor="@color/color_666666" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fa" />
</LinearLayout>