<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/color_F8F8F8" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/main_bg_color" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.biquge.ebook.app.widget.StatusBarView android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/nk" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.biquge.ebook.app.widget.CircleImageView android:id="@id/mx" android:layout_width="75.0dip" android:layout_height="75.0dip" android:src="@drawable/ij" />
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginStart="10.0dip">
                <TextView android:textSize="20.0sp" android:textColor="@color/color_333333" android:gravity="center" android:id="@id/n0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ic" />
                <TextView android:textSize="12.5sp" android:textColor="@color/color_666666" android:gravity="center" android:id="@id/n4" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" />
            </LinearLayout>
            <ImageView android:id="@id/jf" android:background="@drawable/c6" android:visibility="gone" android:layout_width="8.0dip" android:layout_height="8.0dip" android:layout_margin="3.0dip" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:src="@drawable/g2" />
        </LinearLayout>
        <com.biquge.ebook.app.widget.marqueeview.MarqueeTextView android:textSize="13.0sp" android:textColor="@color/color_666666" android:id="@id/xf" android:background="@drawable/as" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" android:singleLine="true" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" />
    </LinearLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <com.biquge.ebook.app.widget.NewShareEntranceView android:id="@id/o8" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/a4" />
                <TextView android:id="@id/o5" android:layout_marginTop="@dimen/a4" android:text="@string/km" android:drawableLeft="@drawable/i8" android:drawableRight="@drawable/g2" style="@style/ff" />
                <View style="@style/sc" />
                <LinearLayout android:orientation="vertical" android:id="@id/q0" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <TextView android:id="@id/o4" android:layout_marginTop="@dimen/a4" android:text="@string/mw" android:drawableLeft="@drawable/i5" android:drawableRight="@drawable/g2" style="@style/ff" />
                <View android:id="@id/o3" style="@style/se" />
                <TextView android:id="@id/o2" android:text="@string/mu" android:drawableLeft="@drawable/id" android:drawableRight="@drawable/g2" style="@style/ff" />
                <TextView android:id="@id/o9" android:layout_marginTop="@dimen/a4" android:text="@string/li" android:drawableLeft="@drawable/ht" android:drawableRight="@drawable/g2" style="@style/ff" />
                <FrameLayout android:id="@id/oa" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@id/o_" android:text="@string/lk" android:drawableLeft="@drawable/ic" android:drawableRight="@drawable/g2" style="@style/ff" />
                    <TextView android:textSize="12.0sp" android:textColor="@color/color_666666" android:layout_gravity="center|right" android:id="@id/ob" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="38.0dip" />
                    <View style="@style/se" />
                </FrameLayout>
                <TextView android:id="@id/o7" android:layout_marginTop="@dimen/a4" android:text="@string/kz" android:drawableLeft="@drawable/ib" android:drawableRight="@drawable/g2" style="@style/ff" />
                <View style="@style/se" />
                <TextView android:id="@id/nz" android:layout_marginBottom="@dimen/a4" android:text="@string/iy" android:drawableLeft="@drawable/i6" android:drawableRight="@drawable/g2" style="@style/ff" />
                <TextView android:id="@id/ny" android:text="@string/j3" android:drawableLeft="@drawable/i3" android:drawableRight="@drawable/g2" style="@style/ff" />
                <TextView android:id="@id/o6" android:layout_marginTop="@dimen/a4" android:text="@string/so" android:drawableLeft="@drawable/i_" android:drawableRight="@drawable/g2" style="@style/ff" />
            </LinearLayout>
            <ViewStub android:id="@id/xq" android:layout="@layout/eh" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>